hphp/hack/test/typecheck/reactive/test_rxshallow2.php.exp
File "test_rxshallow2.php", line 15, characters 10-16:
Shallow reactive functions cannot call non-reactive functions (Typing[4217])
